added style sheet

--- a/Explore-CSS.html
+++ b/Explore-CSS.html
@@ -5,45 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore CSS</title>
-    <style>
-        h1{
-            color: rgb(57, 201, 201);
-        }
-        p{
-            color: burlywood;
-        }
-        #Type{
-            color: crimson;
-            background-color: darkgrey;
-        }
-        .CSS{
-            color:red; 
-        }
-        ol{
-            height: 150px;
-            width:100px;
-            background-color: darkkhaki;
-            color: gold;
-        }
-        li{
-            font-size: 20px;
-            color: forestgreen;
-        }
-        .style{
-            color:indigo;
-        }
-        .fashion{
-            color: lawngreen;
-            font-size: large;
-        }
-        div{
-            background-color: lightcoral;
-            border: 2px navajowhite dotted;
-            padding: 20px;
-            
-
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>What is CSS?</h1>
